testdata/baselines/reference/submodule/compiler/accessorInAmbientContextES5.errors.txt
accessorInAmbientContextES5.ts(4,14): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
accessorInAmbientContextES5.ts(5,21): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
accessorInAmbientContextES5.ts(6,22): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
accessorInAmbientContextES5.ts(7,29): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
accessorInAmbientContextES5.ts(12,18): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
accessorInAmbientContextES5.ts(19,18): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
accessorInAmbientContextES5.ts(25,14): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.


==== accessorInAmbientContextES5.ts (7 errors) ====
    // Should allow accessor in ambient contexts even when targeting ES5
    
    declare class AmbientClass {
        accessor prop1: string;
                 ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        static accessor prop2: number;
                        ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        private accessor prop3: boolean;
                         ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        private static accessor prop4: symbol;
                                ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
    }
    
    declare namespace AmbientNamespace {
        class C {
            accessor prop: string;
                     ~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        }
    }
    
    // Should also work in .d.ts files (simulated with declare)
    declare module "some-module" {
        export class ExportedClass {
            accessor value: any;
                     ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        }
    }
    
    // Regular class should still error when targeting ES5
    class RegularClass {
        accessor shouldError: string; // Should still error
                 ~~~~~~~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
    }